--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   type="number"
                   id="initial-velocity"
                   class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                  placeholder="e.g., 10"
+                  placeholder="ex. 10"
                 />
               </div>
             </div>
@@ -49,7 +49,7 @@
                 type="number"
                 id="final-velocity"
                 class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                placeholder="e.g., 20"
+                placeholder="ex. 20"
               />
             </div>
 
@@ -76,7 +76,7 @@
                 type="number"
                 id="acceleration"
                 class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                placeholder="e.g., 5"
+                placeholder="ex. 5"
               />
             </div>
 
@@ -88,7 +88,7 @@
                 type="number"
                 id="time"
                 class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                placeholder="e.g., 2"
+                placeholder="ex. 2"
               />
             </div>
 
@@ -100,7 +100,7 @@
                 type="number"
                 id="displacement"
                 class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                placeholder="e.g., 100"
+                placeholder="ex. 100"
               />
             </div>
 
@@ -115,7 +115,7 @@
                   type="number"
                   id="initial-height"
                   class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                  placeholder="e.g., 0"
+                  placeholder="ex. 0"
                 />
               </div>
               <div>
@@ -126,7 +126,7 @@
                   type="number"
                   id="launch-angle"
                   class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                  placeholder="e.g., 45"
+                  placeholder="ex. 45"
                 />
               </div>
             </div>
