--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     type="number"
                     id="initial-velocity"
                     class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                    placeholder="e.g., 10"
+                    placeholder="ex., 10"
                   />
                 </div>
               </div>
@@ -54,7 +54,7 @@
                   type="number"
                   id="final-velocity"
                   class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                  placeholder="e.g., 20"
+                  placeholder="ex., 20"
                 />
               </div>
 
@@ -78,7 +78,7 @@
                   type="number"
                   id="acceleration"
                   class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                  placeholder="e.g., 5"
+                  placeholder="ex., 5"
                 />
               </div>
 
@@ -90,7 +90,7 @@
                   type="number"
                   id="time"
                   class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                  placeholder="e.g., 2"
+                  placeholder="ex., 2"
                 />
               </div>
 
@@ -102,7 +102,7 @@
                   type="number"
                   id="displacement"
                   class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                  placeholder="e.g., 100"
+                  placeholder="ex., 100"
                 />
               </div>
 
@@ -117,7 +117,7 @@
                     type="number"
                     id="initial-height"
                     class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                    placeholder="e.g., 0"
+                    placeholder="ex., 0"
                   />
                 </div>
                 <div>
@@ -130,7 +130,7 @@
                     type="number"
                     id="launch-angle"
                     class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                    placeholder="e.g., 45"
+                    placeholder="ex., 45"
                   />
                 </div>
               </div>
@@ -186,7 +186,7 @@
           >
             <div
               id="solution1-container"
-              class="bg-gray-50 rounded-lg p-6 border border-gray-200"
+              class="bg-gray-50 rounded-lg p-6 border border-gray-200 min-h-[280px]"
             >
               <h3 class="text-md font-semibold mb-2">Solution</h3>
               <div class="space-y-2">
