--- a/index.html
+++ b/index.html
@@ -287,6 +287,8 @@
         </div>
       </div>
     </main>
+    <script src="kinematics.js"></script>
     <script src="script.js"></script>
+    <script src="buttons.js"></script>
   </body>
 </html>
