--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
     </main>
     <script src="kinematics.js"></script>
     <script src="script.js"></script>
+    <script src="controls.js"></script>
     <script src="buttons.js"></script>
   </body>
 </html>
