seperate files part 3

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                   >
                   m/s
                 </p>
-                <p>
+                <p id="output-a-1-row">
                   Acceleration:
                   <span id="output-a-1" class="text-blue-600 font-mono">-</span>
                   m/s²
@@ -240,7 +240,7 @@
             >
               <h3 class="text-md font-semibold mb-2">Solution 2</h3>
               <div class="space-y-2">
-                <p>
+                <p id="output-a-2-row">
                   Acceleration:
                   <span id="output-a-2" class="text-blue-600 font-mono">-</span>
                   m/s²
@@ -288,6 +288,7 @@
       </div>
     </main>
     <script src="kinematics.js"></script>
+    <script src="simulation.js"></script>
     <script src="script.js"></script>
     <script src="controls.js"></script>
     <script src="buttons.js"></script>
